--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /venv
 /__pycache__
-./mysite/__pycache__
+/mysite/__pycache__
 job_application/__pycache__/
 job_application/migrations/__pycache__/
